--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    {{ question }}
+    <h1>{{ question. question_text}}</h1>
+    <ul>
+        {% for choice in choice.choice_set.all %}
+        <li>{{ choice.choice_text}}</li>
+        {% endfor %}
+    </ul>
+    
 </body>
 </html>
